# arabic-handwritten-to-text

./: .gitignore  README.md  app.py  arabic-ocr.service  export_dataset.py  ocr_arabic.py  output.txt  preprocess_images.py  pyproject.toml  requirements.txt  setup.sh  setup_arabic_ocr_env.sh
.devcontainer/: Dockerfile  devcontainer.json
templates/: dashboard.html  index.html
